--- a/style.css
+++ b/style.css
@@ -619,3 +619,337 @@
             margin-left: -15px;
             margin-right: -15px;
         }
+body #navbar .navbar-collapse {
+            border-top: 0;
+            border-bottom: 1px solid #fff;
+            top: 0;
+        }
+        .footer {
+            margin-bottom: 52px;
+        }
+        #navbar .navbar-nav {
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+        #navbar .navbar-nav>li a {
+            padding: 8px 20px;
+            border-bottom: 1px solid #312a2a;
+        }
+        #navbar .navbar-nav>li>a.phone{
+            font-size: 12px;
+        }
+        #navbar .navbar-nav>li>a.lang{
+            font-size: 12px;
+        }
+        #navbar .navbar-nav>li:last-of-type>a {
+            border: 0;
+        }
+        #navbar .navbar-collapse .navbar-nav>li>a:hover, #navbar .navbar-collapse .navbar-nav>li>a:focus, #navbar .navbar-collapse .navbar-nav>li>a:active {
+            color: #f14d34;
+            background-color: transparent;
+            border-color: #312a2a;
+        }
+        #navbar .navbar-nav>li {
+            margin: 0;
+        }
+        #navbar .navbar-collapse {
+            max-height: calc(100vh - 49px);
+            overflow-y: auto;
+        }
+    }
+    .row-flex {
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 75px;
+    }
+    .row-flex:after, .row-flex:before {
+        width: 0;
+    }
+    #block-tariffs {
+        padding: 160px 0 90px;
+        font-family: 'Montserrat', sans-serif;
+        background: url(/img/D-background-opacity.svg) no-repeat right top, #fff;
+        background-size: 58%;
+    }
+    #block-tariffs .block-title {
+        margin-top: 0;
+        margin-bottom: 65px;
+        text-align: center;
+        color: #000;
+        font-weight: bold;
+        font-size: 42px;
+    }
+    .tariffs-row {
+        display: block;
+    }
+    .tariffs-row.row-flex {
+        display: flex;
+    }
+    .tariff {
+        height: auto;
+        border-radius: 5px;
+        border: 1px solid #e6e6e6;
+        padding: 70px 20px 60px;
+        background: #fff;
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+        transition: all 500ms;
+        transform-origin: center;
+        margin-bottom: 30px;
+        max-width: 500px;
+    }
+    .tariff-wrapper {
+        width: 300px;
+        max-width: 100%;
+        margin: 0 auto;
+        height: 100%;
+        position: relative;
+        padding-bottom: 80px;
+    }
+    .tariff-header {
+        border-bottom: 2px solid #e5e5e5;
+        margin-bottom: 50px;
+    }
+    .tariff-title {
+        font-weight: bold;
+        font-size: 22px;
+        font-weight: bold;
+        color: #f14d32;
+        line-height: 1.3;
+    }
+    .tariff-price {
+        font-size: 72px;
+        font-weight: bold;
+        color: #050c33;
+        line-height: 1;
+        white-space: nowrap;
+    }
+    .tariff-price .rub {
+        font-size: 28px;
+        font-weight: 500;
+        vertical-align: text-top;
+        display: inline-block;
+        margin-left: -5px;
+        margin-top: 18px;
+    }
+    .tariff-price-description {
+        line-height: 1;
+        color: #040c33;
+        margin-bottom: 20px;
+        font-weight: 500;
+    }
+    .tarrif-body-item {
+        margin-bottom: 18px;
+        line-height: 1.2;
+        font-size: 16px;
+        font-weight: 100;
+        position: relative;
+        padding-left: 30px;
+        color: #4e5972;
+        font-weight: 500;
+    }
+    .tarrif-body-item:before {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 13px;
+        height: 10px;
+        background: url(/img/checkmark.svg) no-repeat center;
+        background-size: contain;
+    }
+    .tariff-footer-btn {
+        text-decoration: none;
+        display: block;
+        border-radius: 5px;
+        text-transform: uppercase;
+        color: #f14d34;
+        border: 1px solid #f14d34;
+        text-align: center;
+        transition: all 500ms;
+        padding: 20px 10px;
+        line-height: 1;
+        font-size: 12px;
+        font-weight: 500;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
+    .tariff-footer-btn:hover, .tariff-footer-btn:active, .tariff-footer-btn:focus {
+        text-decoration: none;
+        color: #fff;
+        background: #f14d34;
+    }
+    .col-flex:nth-of-type(2n) .tariff {
+        transform: scale(1.1);
+        z-index: 10;
+        box-shadow: 0 4px 60px rgba(162, 162, 162, .25);
+    }
+    .col-flex:nth-of-type(2n) .tariff .tariff-footer-btn {
+        color: #fff;
+        background: #f14d34;
+    }
+    .tariffs .tariffs-row:hover .col-flex:nth-of-type(2n) .tariff {
+        transform: initial;
+        box-shadow: none;
+    }
+    .tariffs .tariffs-row:hover .col-flex:nth-of-type(2n) .tariff .tariff-footer-btn {
+        color: #f89c91;
+        background: #fff;
+    }
+    .tariff:hover, .tariffs .tariffs-row:hover .col-flex:nth-of-type(2n) .tariff:hover {
+        transform: scale(1.1);
+        z-index: 15;
+        box-shadow: 0 4px 60px rgba(162, 162, 162, .25);
+    }
+    .tariff:hover .tariff-footer-btn, .tariffs .tariffs-row:hover .col-flex:nth-of-type(2n) .tariff:hover .tariff-footer-btn {
+        color: #fff;
+        background: #f14d34;
+    }
+    .tariffs-ps {
+        text-align: center;
+        line-height: 1.3;
+        font-weight: 500;
+        color: #828a9b;
+        width: 475px;
+        max-width: 100%;
+        margin: 0 auto;
+    }
+    .tariffs-link {
+        display: block;
+        margin-top: 26px;
+        font-size: 12px;
+        text-transform: uppercase;
+        color: #050c33;
+        text-decoration: underline;
+        transition: all 300ms;
+    }
+    .tariffs-link:hover {
+        text-decoration: none;
+        color: #f14d32;
+    }
+    .block-main {
+        overflow: hidden;
+        position: relative;
+        padding: 130px 0 60px;
+        color: #fff;
+        font-family: 'Montserrat', sans-serif;
+    }
+    .block-main:before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background: url(/img/druplicon.svg) no-repeat left top;
+        background-color: rgba(0, 0, 0, .8);
+        z-index: 10;
+    }
+    .block-main h1 {
+        font-size: 52px;
+        line-height: 60px;
+        font-weight: bold;
+        margin-top: 0;
+        margin-bottom: 20px;
+    }
+    .block-main-background video {
+        width: 100%;
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: auto;
+        z-index: 5;
+        filter: blur(3px);
+        transform: scale(1.04);
+    }
+    .block-main .container {
+        position: relative;
+        z-index: 15;
+    }
+    .support-main-description {
+        font-size: 18px;
+        line-height: 1.6;
+        font-weight: 500;
+        color: rgba(255, 255, 255, .8);
+        margin-bottom: 55px;
+    }
+    .block-main-btn {
+        display: inline-block;
+        font-weight: 500;
+        font-size: 12px;
+        text-transform: uppercase;
+        line-height: 1;
+        color: #fff;
+        text-decoration: none;
+        padding: 22px 20px;
+        width: 220px;
+        max-width: 100%;
+        text-align: center;
+        border: 2px solid #f14d34;
+        border-radius: 5px;
+        transition: background 300ms;
+        margin-bottom: 45px;
+    }
+    .block-main-btn:focus, .block-main-btn:hover, .block-main-btn:active {
+        background: #f14d34;
+        text-decoration: none;
+        color: #fff;
+    }
+    .support-achievements {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 50px;
+    }
+    .support-achievements:after, .support-achievements:before {
+        width: 0;
+    }
+    .support-achievement {
+        margin-bottom: 96px;
+    }
+    .support-achievement-wrapper {
+        border-left: 3px solid #f14d34;
+        padding-left: 15px;
+        padding-top: 5px;
+        padding-bottom: 10px;
+        min-height: 80px;
+        height: 100%;
+    }
+    .support-achievement-description {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 1.25;
+        color: rgba(255, 255, 255, .7);
+    }
+    .support-achievement-title {
+        font-size: 24px;
+        color: #fff;
+        font-weight: bold;
+        line-height: 1;
+        margin-bottom: 5px;
+        position: relative;
+    }
+    .support-achievement-title img {
+        vertical-align: baseline;
+        position: absolute;
+        left: 55px;
+        top: -16px;
+    }
+    .support-achievement:first-of-type .support-achievement-title {
+        font-size: 48px;
+        margin-top: -22px;
+    }
+    footer {
+        background: linear-gradient(254.72deg, rgba(255, 255, 255, .276) -114.85%, rgba(255, 255, 255, 0) 69.04%), url('/img/D-flying.svg') no-repeat top center, url('/img/D-footer.svg') no-repeat bottom right, #040613;
+        padding: 117px 0 54px;
+        color: #fff;
+        font-family: 'Montserrat', sans-serif;
+    }
